--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     <meta http-equiv="refresh" content="30" />
   </head>
   <body>
+    <h1>Circle to pathData Generator</h1>
     cx <input id="cx" type="text" name="cx" value="" />
     cy <input id="cy" type="text" name="cy" value="" />
     r <input id="r" type="text" name="r" value="" />
     <input id="validate" type="button" name="validate" value="Generate" /><br /><br />
 
-    <textarea id="result"></textarea>
+    <textarea id="result" cols="33" rows="5"></textarea>
     <script type="text/javascript" src="calculator.js"></script>
   </body>
 </html>
