--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <input id="validate" type="button" name="validate" value="Generate" /><br /><br />
 
     <textarea id="result" cols="33" rows="5"></textarea>
+    <h1>Color</h1>
+    r <input id="color_r" type="text" name="r" value="" />
+    g <input id="color_g" type="text" name="g" value="" />
+    b <input id="color_b" type="text" name="b" value="" /><br /><br />
+    
+    hexa <input id="color_hexa" type="text" name="hexa" value="" />
     <script type="text/javascript" src="calculator.js"></script>
   </body>
 </html>
