--- a/index.html
+++ b/index.html
@@ -23,5 +23,6 @@
     
     hexa <input id="color_hexa" type="text" name="hexa" value="" />
     <script type="text/javascript" src="calculator.js"></script>
+    <script type="text/javascript" src="color.js"></script>
   </body>
 </html>
